tests/fixtures/invalid/none_pow_float.py
# Cannot power None and Float
x: float = None ** 1.0
